<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <TextView
        android:id="@+id/about_text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_version"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="20dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/about_text_build"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_build_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:text="@string/About_Text1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="10dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:text="@string/About_Text2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/about_translations"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/about_translations_esperanto_polish"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/about_translations_french"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/about_programm_code_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/aboutTextViewGitHubLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/about_programm_code_text2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:text="@string/About_Text3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="15dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:text="@string/pulseboy"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="5dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:text="@string/credits_to_roger_hicks_and_matt_white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:text="@string/About_Text4"
        android:autoLink="web"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center" />

    <TextView
        android:id="@+id/aboutTextPulseBoyLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:text="@string/under_cc_by_3_0_license"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:text="@string/and"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:text="@string/bfxr"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:text="@string/About_Text5"
        android:autoLink="web"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center" />

    <TextView
        android:id="@+id/aboutTextBFXRLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:text="@string/under_apache_licence_2_0"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:layout_marginBottom="20dp" />

</LinearLayout>

</ScrollView>