<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/button_5_blue"
                android:adjustViewBounds="true"
                android:layout_marginRight="5dp" />

            <ImageView
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/button_5_green"
                android:adjustViewBounds="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <ImageView
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/button_5_red"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <ImageView
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:src="@drawable/button_5_yellow" />

            <ImageView
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/button_5_gray"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/colour_blue"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/colour_green"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/colour_red"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/colour_yellow"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/colour_gray"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>